Tweak help.html a bit.

--- a/help.html
+++ b/help.html
@@ -1,7 +1,7 @@
 <ul>
 	<li>
 		<h3>What's is RegexEngine?</h3>
-		<p>RegexEngine is a Web Application built on a <a href="https://github.com/KendallHopkins/FormalTheory">FormalTheory library (PHP)</a> that allows for lexing, manipulation, optimization and render of <a href="http://en.wikipedia.org/wiki/Regular_expression">Regular Expressions</a> or Regex. In addition manipulation of regex it can transform any arbitrary regex from and to a <a href="http://en.wikipedia.org/wiki/Finite-state_machine">Finite Automata</a>. This allows for even more transformations to the expression such as negation, union, intersection, counting solutions, etc. These combination of tools can be very useful in solve many regex related problems, such as: find an inverse of a regex, proving two regexes have no overlapping solution, finding simpler equivalent regex, visualizing the DFA, proving two regex are equivalent and many more.</p>
+		<p>RegexEngine is an <a href="https://github.com/KendallHopkins/RegexEngine">open source</a> Web Application built on a <a href="https://github.com/KendallHopkins/FormalTheory">FormalTheory library (PHP)</a> that allows for lexing, manipulation, optimization and render of <a href="http://en.wikipedia.org/wiki/Regular_expression">Regular Expressions</a> (or regex). In addition manipulation of regex it can transform any arbitrary regex from and to a <a href="http://en.wikipedia.org/wiki/Finite-state_machine">Finite Automata</a>. This allows for even more transformations to the expression such as negation, union, intersection, counting solutions, etc. These combination of tools can be very useful in solve many regex related problems, such as: find an inverse of a regex, proving two regexes have no overlapping solutions, finding a simpler equivalent regex, visualizing the DFA of a regex, proving two different regex are equivalent and many more.</p>
 	</li>
 	<li>
 		<h3>How do I get started?</h3>
@@ -22,5 +22,9 @@
 	<li>
 		<h3>How can I delete a node once I created it?</h3>
 		<p>Right click on the node and select "delete".</p>
+	</li>
+	<li>
+		<h3>Will you implement feature X?</h3>
+		<p>Maybe. Let me know you're ideas! You can contact me at my <a href="http://www.google.com/recaptcha/mailhide/d?k=015_swKpS3GzLSR70hby-Ycw==&c=qqKUe4Wqw4xIqgYSpSDD5CdniGr9JkKSfIAwTzNcDbY=">email</a> (evil spam robots needs not apply).</p>
 	</li>
 </ul>
